WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131877
Fix leak of UIScreenEdgePanGestureRecognizer in WKSwipeTransitionController
https://bugs.webkit.org/show_bug.cgi?id=131877
Summary
Fix leak of UIScreenEdgePanGestureRecognizer in WKSwipeTransitionController
Joseph Pecoraro
Reported
2014-04-18 20:41:59 PDT
I was seeing leaks of UIScreenEdgePanGestureRecognizer related data allocated in WKSwipeTransitionController. Seems we should be autoreleasing the recognizer we are creating because this file is not ARC.
Attachments
[PATCH] Proposed Fix
(1.26 KB, patch)
2014-04-18 20:42 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2014-04-18 20:42:41 PDT
Created
attachment 229709
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 2
2014-04-19 15:16:54 PDT
Comment on
attachment 229709
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 229709 Committed
r167552
: <
http://trac.webkit.org/changeset/167552
>
WebKit Commit Bot
Comment 3
2014-04-19 15:16:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug