Fix leak of UIScreenEdgePanGestureRecognizer in WKSwipeTransitionController https://bugs.webkit.org/show_bug.cgi?id=131877

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-04-19
Reviewed by Darin Adler.

* UIProcess/ios/ViewGestureControllerIOS.mm:
(-[WKSwipeTransitionController gestureRecognizerForInteractiveTransition:WithTarget:action:]):

Canonical link: https://commits.webkit.org/149972@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167552 268f45cc-cd09-0410-ab3c-d52691b4dbfc